# CProjectTemplate

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_8txt.html  Makefile  README.md  bar_2CMakeLists_8txt.html  bar_8c.html  bar_8c__incl.dot  bar_8h.html  bar_8h__dep__incl.dot  bar_8h__incl.dot  bar_8h_source.html  conanfile.txt  dir_08ebf401352d0c333d3a643fc2ed36cf.html  dir_30e578e9932b449dc064e1f38e5a91d8.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_97ad83a8c99cd02dc7c96faabd2cafb3.html  files.html  foo_2CMakeLists_8txt.html  foo_8c.html  foo_8c__incl.dot  foo_8h.html  foo_8h__dep__incl.dot  foo_8h_source.html  globals.html  globals_func.html  graph_legend.html  index.html  my__lib_2CMakeLists_8txt.html  my__lib_8c.html  my__lib_8c__incl.dot  my__lib_8h.html  my__lib_8h__dep__incl.dot  my__lib_8h_source.html
.github/workflows/: documentation.yaml  macos.yml  ubuntu.yml  windows.yml
app/: CMakeLists.txt  main.c
cmake/: AddGitSubmodule.cmake  CodeCoverage.cmake  Sanitizer.cmake  Tools.cmake  Warnings.cmake
configured/: CMakeLists.txt  config.h.in
docs/: Doxyfile
search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js
src/bar/: CMakeLists.txt  bar.c  bar.h
src/foo/: CMakeLists.txt  foo.c  foo.h
src/my_lib/: CMakeLists.txt  my_lib.c  my_lib.h
tests/: CMakeLists.txt  main.c  test_bar.c  test_foo.c
